5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4173/executions/1667_2318.log
== TEST (2019-04-16 16:05:59) 
-- CODE:
a = 100/0.25
print(a)

-- OUTPUT:
400.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:06:08) 
-- CODE:
a = 100/2
print(a)

-- OUTPUT:
50.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:06:11) 
-- CODE:
a = 100/4
print(a)

-- OUTPUT:
25.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:11:18) 
-- CODE:
a = input("nome")
r = 20.114*0.4379
d = 19.984*4.289

if (a == "SNAPE"):
	mensagem = r
if (a == "VOLDEMORT"):
	mensagem = d
print(mensagem)
-- EXECUTION TIME:
0.174629
-- TEST CASE 1:
---- input:
SNAPE
---- correct output:
45.9328613838776
---- user output:
8.807920600000001
-- TEST CASE 2:
---- input:
VOLDEMORT
---- correct output:
4.6593611564467246
---- user output:
85.711376
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:11:21) 
-- CODE:
a = input("nome")
r = 20.114*0.4379
d = 19.984*4.289

if (a == "SNAPE"):
	mensagem = r
if (a == "VOLDEMORT"):
	mensagem = d
print(mensagem)
-- OUTPUT:
8.807920600000001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:16:58) 
-- CODE:
a = input("nome")
r = 20.114*(0.4379*60)
d = 19.984*4.289

if (a == "SNAPE"):
	mensagem = r
if (a == "VOLDEMORT"):
	mensagem = d
print(mensagem)
-- OUTPUT:
528.475236
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:17:11) 
-- CODE:
a = input("nome")
r = 20.114*(0.4379)
d = 19.984*4.289

if (a == "SNAPE"):
	mensagem = r
if (a == "VOLDEMORT"):
	mensagem = d
print(mensagem)
-- OUTPUT:
8.807920600000001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:17:35) 
-- CODE:
a = input(.upper("nome"))
r = 20.114*(0.4379)
d = 19.984*4.289

if (a == "SNAPE"):
	mensagem = r
if (a == "VOLDEMORT"):
	mensagem = d
print(mensagem)
-- ERROR:
File "XXXX", line 1
    a = input(.upper("nome"))
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:17:43) 
-- CODE:
a = input("nome")
r = 20.114*(0.4379)
d = 19.984*4.289

if (a == "SNAPE"):
	mensagem = r
if (a == "VOLDEMORT"):
	mensagem = d
print(mensagem)
-- EXECUTION TIME:
0.181708
-- TEST CASE 1:
---- input:
SNAPE
---- correct output:
45.9328613838776
---- user output:
8.807920600000001
-- TEST CASE 2:
---- input:
VOLDEMORT
---- correct output:
4.6593611564467246
---- user output:
85.711376
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:17:43) 
-- CODE:
a = input("nome")
r = 20.114*(0.4379)
d = 19.984*4.289

if (a == "SNAPE"):
	mensagem = r
if (a == "VOLDEMORT"):
	mensagem = d
print(mensagem)
-- OUTPUT:
8.807920600000001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:20:01) 
-- CODE:
a = input("nome")
r = 20.114*(0.4379)
d = 19.984*4.289

if (a == .upper(("SNAPE")):
	mensagem = r
if (a == "VOLDEMORT"):
	mensagem = d
print(mensagem)
-- ERROR:
File "XXXX", line 5
    if (a == .upper(("SNAPE")):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:23:56) 
-- CODE:
a = input("nome")
r = 20.114*(0.4379)
d = 19.984*4.289

if (a == "SNAPE"):
	mensagem = r
if (a == "VOLDEMORT"):
	mensagem = d
print(mensagem)
-- OUTPUT:
8.807920600000001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:25:48) 
-- CODE:
a = input("nome")
r = 20.114/0.4379
  
d = 19.984/4.289

if (a == "SNAPE"):
	mensagem = r
if (a == "VOLDEMORT"):
	mensagem = d
print(mensagem)
-- EXECUTION TIME:
0.202379
-- TEST CASE 1:
---- input:
SNAPE
---- correct output:
45.9328613838776
---- user output:
45.9328613838776
-- TEST CASE 2:
---- input:
VOLDEMORT
---- correct output:
4.6593611564467246
---- user output:
4.6593611564467246
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
